Added an editor button that brings up a dialog with the reading and a meaning box. Idea is to add to this.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "noteTypes": ["japanese"],
-    "srcFields": ["Expression", "Kanji"],
-    "dstFields": ["Reading", "Reading"],
-    "furiganaSuffix": " (furigana)"
+    "srcField": "Japanese",
+    "englishField": "English"
 }
